--- a/README.Rmd
+++ b/README.Rmd
@@ -1,5 +1,23 @@
 ---
 output: github_document
+
+references: 
+- id: ARHT2016
+  title: An adaptable generalization of Hotelling's  $T^2$ test in high dimension
+  author: 
+  - family: Li
+    given: Haoran
+  - family: Aue
+    given: Alexander
+  - family: Paul
+    given: Debashis
+  - family: Peng
+    given: Jie
+  - family: Wang
+    given: Pei
+  publisher: arXiv preprint arXiv:1609.08725
+  issued:
+     year: 2016 
 ---
 
 <!-- README.md is generated from README.Rmd. Please edit that file -->
@@ -14,7 +32,7 @@ knitr::opts_chunk$set(
 
 # ARHT
 
-Perform the Adaptable Regularized Hotelling's $T^2$ test (ARHT) proposed by Li et al., (2016) arXiv:1609.08725. Both one- and two- sample mean test are available with various probabilistic alternative prior models. It contains a function to consistently estimate higher order moments of the population covariance spectral distribution using the spectral of the sample covariance matrix (Bai et al. (2010) <doi:10.1111/j.1467-842X.2010.00590.x>). In addition, it contains a function to sample from 3-variate chi-squared random vectors approximately with a given correlation matrix when the degrees of freedom are large. 
+Perform the Adaptable Regularized Hotelling's $T^2$ test (ARHT) proposed by @ARHT2016. Both one- and two- sample mean test are available with various probabilistic alternative prior models. It contains a function to consistently estimate higher order moments of the population covariance spectral distribution using the spectral of the sample covariance matrix. In addition, it contains a function to sample from 3-variate chi-squared random vectors approximately with a given correlation matrix when the degrees of freedom are large. 
 
 ## Installation
 
@@ -51,3 +69,6 @@ res4 = ARHT(dataX, dataY, mu_0 = rep(0.01,p),
             Type1error_calib = "sqrt")
 RejectOrNot = res4$ARHT_pvalue < 0.05
 ```
+
+## Reference
+
