--- a/README.Rmd
+++ b/README.Rmd
@@ -34,6 +34,9 @@ knitr::opts_chunk$set(
 
 Perform the Adaptable Regularized Hotelling's $T^2$ test (ARHT) proposed by @ARHT2016. Both one- and two- sample mean test are available with various probabilistic alternative prior models. It contains a function to consistently estimate higher order moments of the population covariance spectral distribution using the spectral of the sample covariance matrix. In addition, it contains a function to sample from 3-variate chi-squared random vectors approximately with a given correlation matrix when the degrees of freedom are large. 
 
+## CRAN download counts
+[![](https://cranlogs.r-pkg.org/badges/ARHT)](https://cran.r-project.org/package=ARHT)
+
 ## Installation
 
 You can install ARHT from github with:
